@@ -1,16 +1,16 @@
 /*
- * atom_identifier.h
+ * atom_type.h
  * Vino Crescini  <jcrescin@cit.uws.edu.au>
  */
 
-#ifndef __EPI_ATOM_IDENTIFIER_H
-#define __EPI_ATOM_IDENTIFIER_H
+#ifndef __EPI_ATOM_TYPE_H
+#define __EPI_ATOM_TYPE_H
 
 typedef enum
 {
   atom_holds = 0,
   atom_subst = 1,
   atom_memb  = 2
-} atom_identifier_type;
+} atom_type_type;
 
 #endif
