@@ -1,5 +1,10 @@
 2002-08-11  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* kb/atom_identifier.h :
+	* kb/atom_type.h :
+
+	  - Renamed atom_identifier to atom_type.
+
 	* Makefile :
 
 	  - Added a "set -e" to prevent make from continuing after
